watch_tv and wake_up migrated natively

--- a/appdaemon/apps/apps.yaml
+++ b/appdaemon/apps/apps.yaml
@@ -15,16 +15,16 @@ notifier:
       notification_service: notify/mobile_app_pixel_4a
       proximity_id: proximity.distance_valentine_home
 
-watch_tv:
-  module: watch_tv
-  class: watch_tv
-  log: watch_tv
-  constrain_input_boolean: input_boolean.automation_watch_tv
-  media_player_id: media_player.philips_android_tv
-  supported_apps:
-    - Netflix
-    - Plex
-    - Prime Video
+#watch_tv:
+#  module: watch_tv
+#  class: watch_tv
+#  log: watch_tv
+#  constrain_input_boolean: input_boolean.automation_watch_tv
+#  media_player_id: media_player.philips_android_tv
+#  supported_apps:
+#    - Netflix
+#    - Plex
+#    - Prime Video
 
 clean_house:
   module: clean_house
@@ -33,11 +33,11 @@ clean_house:
   hass_base_url: !secret hass_base_url
   constrain_input_boolean: input_boolean.automation_clean_house
 
-wake_up:
-  module: wake_up
-  class: wake_up
-  log: wake_up
-  constrain_input_boolean: input_boolean.automation_wake_up
+#wake_up:
+#  module: wake_up
+#  class: wake_up
+#  log: wake_up
+#  constrain_input_boolean: input_boolean.automation_wake_up
 
 monitor_home:
   module: monitor_home
